<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/angus_btn"
        android:layout_width="@dimen/dimen_256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/angus"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/hereford_btn"
        android:layout_width="@dimen/dimen_256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAllCaps="false"
        android:text="@string/hereford"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/angus_btn" />

    <Button
        android:id="@+id/brahman_btn"
        android:layout_width="@dimen/dimen_256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/brahman"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hereford_btn" />

    <Button
        android:id="@+id/shorthorn_btn"
        android:layout_width="@dimen/dimen_256dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="16dp"
        android:textAllCaps="false"
        android:layout_marginEnd="161dp"
        android:text="@string/shorthorn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brahman_btn" />

    <Button
        android:id="@+id/brangus_btn"
        android:layout_width="@dimen/dimen_256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/brangus"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shorthorn_btn" />

</android.support.constraint.ConstraintLayout>